# ccp_playground

./: .gitignore  CMakeLists.txt  default.nix  flake.nix  result  result 2
app/: playing.cpp
bar/: CMakeLists.txt  barConfig.cmake.in
